--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -81,6 +81,15 @@ body {
 
 }
 
-.total {
+#totalR {
     margin-top: 70px;
 }
+
+#totalD {
+    margin-top: 70px;
+}
+
+#totalC {
+    margin-top: 70px;
+}
+
