--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -107,4 +107,15 @@ font-size: 30px;
     color: green;
     font-size: 30px;
 }
+
+#search-text {
+    margin: 10px 0px;
+    margin-bottom: 200px;
+    margin-top: -150px;
+    font-size: 30px;
+}
     
+
+#searchR {
+ margin-top: 150px;
+}
