--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -81,6 +81,24 @@ body {
 
 }
 
+#fifth-circle {
+    width: 300px;
+    height: 300px;
+    background: whitesmoke;
+    /* background: rgba(255,255,255,0.5); */
+    border: 3px solid black;
+    text-size-adjust: 15px;
+    margin: 570px ;
+    margin-top: 700px;
+    border-radius: 50%;
+    text-align: center;
+    margin-right: 470px;
+
+}
+
+
+
+
 #totalR {
     margin-top: 70px;
 }
@@ -119,3 +137,4 @@ font-size: 30px;
 #searchR {
  margin-top: 150px;
 }
+
